packages/shared/src/components/utilities.module.css
.legal {
  & a {
    display: inline-block;
    text-decoration: underline;
    color: inherit;
    @supports (display: contents) {
      display: contents;
    }
  }
}

.pageContainer {
  max-width: $pageMaxWidth;

  &:global(.sidebarRendered) {
    margin-left: calc(50% - (6.375rem + ($pageMaxWidth / 2)));

    &:global(.sidebarExpanded) {
      margin-left: calc(50% - (13.75rem + ($pageMaxWidth / 2)));
    }
  }

  @screen laptopL {
    width: $pageMaxWidth;
  }

  @screen laptop {
    width: $pageMaxWidth;

    &:global(.sidebarRendered),
    &:global(.sidebarRendered.sidebarExpanded) {
      margin-left: calc(50% - (6.375rem + ($pageMaxWidth / 2)));
    }
  }

  @screen tablet {
    margin: auto;
  }
}

.pageWidgets {
  max-width: $pageMaxWidth;
  position: relative;

  @screen laptop {
    position: absolute;
    left: 100%;
  }
}

.feedPage {
  &.notReady {
    & > * {
      visibility: hidden;
    }
  }
}

.activeTabIndicator {
  border-radius: 0.063rem;
}

